[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "school-exposures"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "PyYAML>=6.0",
    "dnspython>=2.6",
    "cryptography>=42.0",
    "tldextract>=5.0",
    "censys>=2.2",
    "tqdm>=4.66",
    "structlog>=24.0",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
exposures = "exposures.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/exposures"]
